[package]
name = "liquid_staking"
version = "0.12.1"
edition = "2018"
description = ""
license = "Apache-2.0"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = { version = "0.12.1" }
cw2 = { version = "0.12.1" }
cw20 = { version = "0.12.1" }
cosmwasm-std = { version = "1.0.0-beta5", features = ["stargate"] }
cw-storage-plus = { version = "0.12.1" }
cw-controllers = { version = "0.12.1" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
